@@ -85,7 +85,6 @@
     <Translation ID="PRR_DESCRIPTION" String="允許可放置型(RICO)建築大於4x4區域尺吋和可客制化" />
     <Translation ID="PRR_OPTION_MOREDEBUG" String="啟用額外的除錯日誌記錄" />
     <Translation ID="PRR_OPTION_FORCERESET" String="在遊戲加載時強制重置現有建築統計數值" />
-    <Translation ID="PRR_OPTION_PLAINTHUMBS" String="使用特寫式資訊縮略圖" />
     <Translation ID="PRR_OPTION_REGENTHUMBS" String="重創建特寫式資訊縮略圖" />
     <Translation ID="PRR_OPTION_SPDHDR" String= "此功能提升遊戲效能， 但會導致開啟界面時延遲" />
     <Translation ID="PRR_OPTION_SPEED" String= "界面未激活時轉入後臺待命(無須每幀即時更新) " />
