@@ -3,7 +3,8 @@
 - Add manual translation selection option
 - Update translation framework to latest version with improved fallback language detection
 - Allow for longer translation strings in dropdown menu widths
-- Standardise thumbnail backgrounds
+- Standardise default thumbnail backgrounds to dark sky-blue
+- Overhaul thumbnail background option choices; now a dropdown (color[default], plain, skybox)
 - Memory management: delay generating thumbnails until actually in-game
 - Memory management: don't generate disabled thumbnails
 - Regenerating thumbnails now does only that (leaves the rest of the button alone)
